# Naja-LifeSaver

./: .env  .gitignore  Cargo.toml
src/: logger.rs  main.rs
src/service/: mod.rs  report_handler.rs  tapi_listening_handler.rs
