[package]
name = "naja_lifesaver"
version = "0.0.0-bleeding-edge"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
dotenv = "0.15.0"
reqwest = "0.11.8"
chrono = "0.4.19"
yansi = "0.5.0"
serenity = "0.10.9"
derive = "1.0.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tokio-cron-scheduler = "*"
once_cell = "1.9.0"
retainer = "0.2"